--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Christine de Kock
 ###############################################
 
 navbar-links:
-  Projects: "projects"
+  #Projects: "projects"
 
 ################
 # --- Logo --- #
